[gd_scene load_steps=6 format=3 uid="uid://dyrf50yc61ric"]

[ext_resource type="Script" path="res://src/ui/store/panel/option/store_option.gd" id="1_yqeex"]
[ext_resource type="Texture2D" uid="uid://lsinxl4gsrnk" path="res://src/game/weapons/range/pistol/pistol.png" id="2_g1gut"]
[ext_resource type="FontFile" uid="uid://jd478um6wqpv" path="res://assets/fonts/Gameplay.ttf" id="3_3e06n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j23l0"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.211705, 0.449293, 0.874181, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.359069, 0.359069, 0.359069, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moaep"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.0705882, 0.698039, 0.215686, 1)

[node name="StoreOption" type="PanelContainer"]
custom_minimum_size = Vector2(0, 64)
theme_override_styles/panel = SubResource("StyleBoxFlat_j23l0")
script = ExtResource("1_yqeex")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SpriteOption" type="TextureRect" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_g1gut")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2

[node name="OptionName" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3e06n")
theme_override_font_sizes/font_size = 12
text = "Nombre de item"

[node name="Description" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3e06n")
theme_override_font_sizes/font_size = 10
text = "Descripcion"

[node name="BuyButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_moaep")
text = "10$"

[connection signal="pressed" from="HBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
